few minor changes

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
 .App {
   text-align: center;
 }
+
+button {
+  background-color: white;
+  font: inherit;
+  border: 1px solid blue;
+  padding: 8px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: whitesmoke;
+}
